InsuranceOrg/force-app/main/default/objects/vlocity_ins__CalculationProcedure__c/vlocity_ins__CalculationProcedure__c.object-meta.xml
<CustomObject>
    <description>Defines a declarative calculation procedure consisting of a series of mathematical steps performed on inputs, matrix lookups and user-defined variables. Vlocity Calculation Procedures can be changed by authorized administrators who do not have the &quot;Customize Application&quot; permission and without writing Apex code.</description>
    <label>Vlocity Calculation Procedure</label>
    <nameField>
        <label>Calculation Procedure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Calculation Procedures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>