InsuranceOrg/force-app/main/default/objects/vlocity_ins__CalculationProcedure__c/fields/vlocity_ins__SubType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SubType__c</fullName>
    <label>SubType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>