InsuranceOrg/force-app/main/default/objects/vlocity_ins__CalculationProcedure__c/recordTypes/vlocity_ins__Declarative.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__Declarative</fullName>
    <active>true</active>
    <label>Declarative</label>
</RecordType>